Fix message wrapping

--- a/Valour/Client/wwwroot/css/app.css
+++ b/Valour/Client/wwwroot/css/app.css
@@ -77,12 +77,14 @@ body {
     width: 100%;
     margin-top: 4px;
     padding-bottom: 0px;
+    position: relative;
 }
 
 .multi-message {
     width: 100%;
     margin-top: 0px;
     margin-bottom: 0px;
+    position: relative;
 }
 
 .multi-message-content {
@@ -169,7 +171,7 @@ body {
 
 .message .message-content {
     display: inline-block;
-    margin-left: 7px;
+    margin-left: 3px;
     margin-top: 4px;
     vertical-align: top;
 }
@@ -183,6 +185,7 @@ body {
 
 .content p {
     margin: 0px;
+    word-break: break-all;
 }
 
 .content code {
@@ -207,6 +210,7 @@ body {
     margin-bottom: 0px;
     word-break: break-all;
     user-select: text;
+    padding-left: 48px;
 }
 
 .message .content {
@@ -223,10 +227,15 @@ body {
 
 .message .time-container {
     min-width: 48px;
+    position: absolute;
+    top: 0px;
+    top: 37px;
 }
 
 .multi-message .time-container {
     min-width: 48px;
+    position: absolute;
+    top: 0px;
 }
 
 .message .time {
@@ -938,6 +947,7 @@ body {
     margin-left: 10px;
     margin-right: 10px;
     height: 35px;
+    cursor: pointer;
   }
   
   .context-menu-item:nth-last-child(1) {
